--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/finance/app.js": "js/finance/app.js?id=f5d593e74d8b392ea3c0",
-    "/css/finance/app.css": "css/finance/app.css?id=03fa26c8c5140b999784"
+    "/js/finance/app.js": "/js/finance/app.js?id=f5d593e74d8b392ea3c0",
+    "/css/finance/app.css": "/css/finance/app.css?id=03fa26c8c5140b999784"
 }
