--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gitlab.telepol.net/borislav/elos.git"
+    "url": ""
   },
   "keywords": [],
   "author": "",
